--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
   },
   "peerDependencies": {
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "5.2.0"
+    "react-dom": "16.13.1"
   },
   "jest": {
     "testRegex": "(/__tests__/.*|(\\.|/)test)\\.ts$",
